# ps2-dwarf1

./: .gitignore  README.md  analyze.py  dump_samples.py  extract.py  pyproject.toml  srctree.py
ghidra/: Dwarf1Functions.java  Dwarf1Globals.java  Dwarf1Lines.java  Dwarf1Types.java
ps2dwarf1/: __init__.py  cli.py  dwarf1.py  elf.py  model.py
tests/: test_cli.py  test_dwarf1.py  test_elf.py
